# circle-packer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: feature_ci.yaml  master_ci.yaml
circlepacker/: app.py
circlepacker/domain/: model.py  solution_domain.py
src/circlepacker/: app.py
src/circlepacker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/circlepacker/domain/: circle.py  model.py  variables.py
src/circlepacker/optimization/: solver.py
tests/optimization/: test_cost_function.py
