[tool.poetry]
name = "circle-packer"
version = "0.1.0"
description = ""
authors = ["Ryan O'Sullivan <osullivryan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
uvicorn = "^0.11.5"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pylint = "^2.5.2"
black = "^19.10b0"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
