[tool.poetry]
name = "circlepacker"
version = "0.1.2"
description = ""
authors = ["Ryan O'Sullivan <osullivryan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.4.1"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
flake8 = "^3.8.1"
pylint = "^2.5.2"
matplotlib = "^3.2.1"
sklearn = "^0.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
